--- a/main/res/layout/activity_results.xml
+++ b/main/res/layout/activity_results.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/app_name"/>
 
 </LinearLayout>
